# azure-terraforminator

./: .gitignore  README.md  pyproject.toml  terraforminator.py
.github/: dependabot.yaml
.github/workflows/: azure-terraforminator.yaml  create-release.yaml
