[tool.poetry]
name = "azure-terraforminator"
version = "0.1.0"
description = ""
authors = ["githubofkrishnadhas <krishnadhasnk1997@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
azure-identity = "^1.18.0"
azure-mgmt-resource = "^23.1.1"
azure-mgmt-resourcegraph = "^8.0.0"
azure-core = "^1.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
